# pico-examples

libs/: CMakeLists.txt
libs/i2c/: i2c.hh
libs/i2c/src/: CMakeLists.txt  i2c.cpp
libs/lcd/: lcd.hh  lcd_1602.hh  lcd_1602_i2c.hh
libs/lcd/src/: CMakeLists.txt  lcd.cpp  lcd_1602.cpp  lcd_1602_i2c.cpp
libs/test/: CMakeLists.txt
